--- a/src/App.css
+++ b/src/App.css
@@ -50,4 +50,5 @@
   background-color: var(--main-bg-color);
   color: var(--main-text-color);
   font-family: "OpenSans", sans-serif;
+  margin-top: 48px;
 }
