more react practise: use animation, use route, use video as bg

--- a/src/App.css
+++ b/src/App.css
@@ -46,9 +46,7 @@
   /* font */
 }
 
-.chuying-content {
-  background-color: var(--main-bg-color);
-  color: var(--main-text-color);
-  font-family: "OpenSans", sans-serif;
-  margin-top: 48px;
+/* Apply for all pages */
+.content-below-navscroll {
+  margin-top: 55px;
 }
